# akta-pro-cli

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/akta_cli/: __init__.py  __main__.py  app.py  client.py  config.py  console.py  news_tags.py  options.py  runtime.py  update.py
src/akta_cli/commands/: __init__.py  account.py  alternative.py  auth.py  company.py  config.py  industry.py  news.py  update.py
tests/: test_cli.py
